# fatou2

./: .gitignore  .gitmodules  .modernizrrc  CMakeLists.txt  Readme.md  clouds.code-workspace  test.ipynb  webpack.config.js
.ipynb_checkpoints/: test-checkpoint.ipynb
fatou-desktop/src/: main.cpp  precompiled.h
fatou-desktop/src/gui/: CMakeLists.txt
fatou-desktop/src/gui/cef/: CMakeLists.txt  cefApp.cpp  cefApp.h  cefModule.cpp  cefModule.h  cefUtil.cpp  cefUtil.h  client.cpp  client.h  js.cpp  js.h  mixerHandler.cpp  mixerHandler.h  renderHandler.cpp  renderHandler.h  resourceProvider_block.cpp  resourceProvider_block.h  resourceProvider_local.cpp  resourceProvider_local.h  starter.cpp  starter.h
fatou-desktop/src/gui/shared/resources/win/: compatibility.manifest
fatou-desktop/src/shaderc/: CMakeLists.txt  database.cpp  database.h
fatou-desktop/src/shaderc/api/: fatou-shaderc.cpp  fromFile.cpp  shaderCache.cpp  shaderCache.h
fatou-desktop/src/shaderc/include/: fatou-shaderc.h
fatou-desktop/src/window/: app.cpp  app.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  compositor.cpp  compositor.h  console.cpp  console.h  fence.h  fractal.h  framebuffer.h  interlacedRenderer.h  logicalDevice.cpp  logicalDevice.h  measurePerformance.h  nativeWindow.cpp  nativeWindow.h  nativeWindow_win.cpp  offRenderer.cpp  offRenderer.h  physicalDevice.cpp  physicalDevice.h  pingable.h  pipeline.cpp  pipeline.h  pipelineWithTarget.h  renderPass.h  safeQueue.h  semaphore.h  shader.cpp  shader.h  sharedTexture.h  swapChain.cpp  swapChain.h  texture.cpp  texture.h  timing.h  ubo.cpp  (+4 more)
gui/: package.json  tsconfig copy.json  tsconfig.json
gui/public/: index.html
gui/public/js/: app.js.LICENSE.txt
gui/public/shaders/: compile.py
gui/public/shaders/playground/: instanced.vert  mandeld.frag  white.frag
gui/src/: vue-shims.d.ts  vuetify.ts
gui/src/gui/: roboto.css
installer/: installer.nsi
installer/helpers/: install.nsh  utils.nsh  utilsVLC.nsh
legacy/: app.ts  appOld.ts
legacy/character/: character.ts  mainCharacter.ts
legacy/fatou/: GLSLOptimizer.ts  bakeableProgram.ts  color.ts  complex.ts  fractal.ts  fractalProgram.ts  navigator.ts  program.ts  progressive.ts  renderer.ts  shader.ts  texture.ts
legacy/fatou/fractals/: abstractFractal.ts  antifractal.ts  easyFractal.ts  mandelbrot.ts  newton.ts  test.ts
legacy/fatou/shaders/antifractal/: default.fs
legacy/fatou/shaders/mandelbrot/: smooth.fs
legacy/fatou/shaders/preamble/: arith-float32.fs  arith-float64.fs  types.fs  types128.fs  util.fs
legacy/fatou/shaders/util/: white.fs
legacy/fatou/shaders/vertex/: pass.vs
legacy/fatou/styles/: resetStyles.scss  styles.scss
legacy/interface/: controller.ts
legacy/landscape/: landscape.ts
legacy/shaders/: .htaccess
legacy/shaders/clouds2/: atmosphere.frag  sky.frag
legacy/shaders/cloudsOld/: auora.glsl  clouds_1.glsl  clouds_10.glsl  clouds_11.frag  clouds_3.glsl  clouds_4.glsl  clouds_4b.glsl  clouds_5.glsl  clouds_6.glsl  clouds_7.glsl  clouds_8.glsl  clouds_9.glsl  fast_ocean.glsl  flying_lights.glsl  sky.glsl  smooth_voronoi.glsl  test.glsl
legacy/styles/: app.scss
legacy/util/: spine-prepare.js  util.ts
public/: license.txt
public/shaders/playground/: mandel.frag  pass.frag
renderer/: license.txt  tslint.json
renderer/src/: app.ts  fractal.ts  geom.ts  gui.ts  navigator.ts  sciptblocker.ts  simpleProgram.ts
renderer/src/fractals/: abstractFractal.ts  antifractal.ts  easyFractal.ts  mandelbrot.ts  test.ts
renderer/src/shaders/newton/: smooth.fs
renderer/src/shaders/preamble/: arith-float128.fs  fence.fs
renderer/src/shaders/vertex/: 2-default.vs
src/: app.ts  ipc.ts  webapp.ts
src/gui/: main.scss  main.ts  main.vue
src/storage/: storage.ts
web/: .gitignore  Readme.md  bs-config.json  fatou.code-workspace  package.json  webpack.config.js
web/public/: index.html
web/src/: bakeableProgram.ts  fractalProgram.ts  global.ts  program.ts  progressive.ts  renderer.ts  shader.ts  texture.ts
web/src/fractals/: mandelbrot.ts  newton.ts
web/src/shaders/antifractal/: 2-default.fs  2-float.fs
web/src/shaders/mandelbrot/: achat.fs  smooth.fs
web/src/shaders/preamble/: arith-complex.fs  arith-float64.fs  arith-int64.fs  bigint.fs  types32.fs  typesUInt.fs
web/src/shaders/util/: texture.fs
web/src/shaders/vertex/: default.vs  pos.vs
web/src/styles/: themeColors.scss  window.scss
